[package]
name = "stack-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "standard_framework", "framework"], version = "0.12" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"